[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "csa_ai_clean_json_output"
version = "0.0.4"
authors = [
  { name="Kurt Seifried", email="kseifried@cloudsecurityalliance.org" },
]
description = "Cloud Security Alliance AI Clean JSON Output"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [

]

[project.packages.find]
where = [
      	"src"
]


[project.urls]
Homepage = "https://github.com/CloudSecurityAlliance/csa-ai-clean-json-output/"
Issues = "https://github.com/CloudSecurityAlliance/csa-ai-clean-json-output/issues"
